[CMLG-018] implementAboutUsPage Issue: The scrolling wasn't possible on the AboutUsPage. This caused some content on the page to be not visible. Solution: Used max-height: 100vh to allow scrolling. Risk: No risk. Reviewed by: Emily, Annie, Yujia, Eileen, Kevin.

--- a/src/components/css/AboutUsPage.css
+++ b/src/components/css/AboutUsPage.css
@@ -1,3 +1,8 @@
+.aboutUsPage {
+    overflow: auto;
+    max-Height: 100vh;
+}
+
 h1 {
     text-align: center;
     font-family: Calibri;
@@ -25,3 +30,4 @@ p {
     margin-left: 80px;
     margin-right: 80px;
 }
+
